[gd_scene load_steps=4 format=3 uid="uid://cb8gjsadlqxpk"]

[ext_resource type="Script" path="res://GUI.gd" id="1_jbogh"]
[ext_resource type="Script" path="res://TabController.gd" id="2_dwij6"]
[ext_resource type="Script" path="res://HeaderSizing.gd" id="3_6xd4e"]

[node name="Gui" type="CanvasLayer"]
script = ExtResource("1_jbogh")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="ColorRect" parent="MarginContainer"]
layout_mode = 2
color = Color(0.412152, 0.412152, 0.412152, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 0
script = ExtResource("2_dwij6")

[node name="Header" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0
script = ExtResource("3_6xd4e")

[node name="ColorRect" type="ColorRect" parent="MarginContainer/VBoxContainer/Header"]
layout_mode = 2
color = Color(0.215902, 0.215902, 0.215902, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Header"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Header/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 0

[node name="LeftPadding" type="MarginContainer" parent="MarginContainer/VBoxContainer/Header/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Header/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 0

[node name="ProjectNameBox" type="MarginContainer" parent="MarginContainer/VBoxContainer/Header/HBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="MarginContainer/VBoxContainer/Header/HBoxContainer/VBoxContainer2/ProjectNameBox"]
layout_mode = 2
color = Color(0, 0, 0, 0)

[node name="ProjectName" type="Label" parent="MarginContainer/VBoxContainer/Header/HBoxContainer/VBoxContainer2/ProjectNameBox"]
layout_mode = 2
text = "Synaptic GUI"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer3" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Header/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 0

[node name="MiddlePadding" type="MarginContainer" parent="MarginContainer/VBoxContainer/Header/HBoxContainer/VBoxContainer3"]
layout_mode = 2

[node name="VBoxContainer4" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Header/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 0

[node name="HelpButtonBox" type="MarginContainer" parent="MarginContainer/VBoxContainer/Header/HBoxContainer/VBoxContainer4"]
layout_mode = 2

[node name="HelpButton" type="Button" parent="MarginContainer/VBoxContainer/Header/HBoxContainer/VBoxContainer4/HelpButtonBox"]
layout_mode = 2
text = "Help"

[node name="VBoxContainer5" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Header/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 0

[node name="MiddlePadding2" type="MarginContainer" parent="MarginContainer/VBoxContainer/Header/HBoxContainer/VBoxContainer5"]
layout_mode = 2

[node name="VBoxContainer6" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Header/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 0

[node name="OpenTabButtonBox" type="MarginContainer" parent="MarginContainer/VBoxContainer/Header/HBoxContainer/VBoxContainer6"]
layout_mode = 2

[node name="OpenTabButton" type="Button" parent="MarginContainer/VBoxContainer/Header/HBoxContainer/VBoxContainer6/OpenTabButtonBox"]
layout_mode = 2
text = "Open"

[node name="VBoxContainer7" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Header/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 0

[node name="MiddlePadding3" type="MarginContainer" parent="MarginContainer/VBoxContainer/Header/HBoxContainer/VBoxContainer7"]
layout_mode = 2

[node name="VBoxContainer8" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Header/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 0

[node name="ConnectButtonBox" type="MarginContainer" parent="MarginContainer/VBoxContainer/Header/HBoxContainer/VBoxContainer8"]
layout_mode = 2

[node name="ConnectButton" type="Button" parent="MarginContainer/VBoxContainer/Header/HBoxContainer/VBoxContainer8/ConnectButtonBox"]
layout_mode = 2
text = "Connect"

[node name="VBoxContainer9" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Header/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 0

[node name="MiddlePadding4" type="MarginContainer" parent="MarginContainer/VBoxContainer/Header/HBoxContainer/VBoxContainer9"]
layout_mode = 2

[node name="VBoxContainer10" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Header/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 0

[node name="RightPadding" type="MarginContainer" parent="MarginContainer/VBoxContainer/Header/HBoxContainer/VBoxContainer10"]
layout_mode = 2

[connection signal="button_up" from="MarginContainer/VBoxContainer/Header/HBoxContainer/VBoxContainer6/OpenTabButtonBox/OpenTabButton" to="MarginContainer/VBoxContainer" method="_on_open_button_button_up"]
